--- a/index.html
+++ b/index.html
@@ -58,18 +58,22 @@
             <h2 class="visually-hidden">Section Title for Screen Readers</h2>
             <ul class="about-list">
             <li class="icon-item">
+                <div class="icon-wrapper">
                 <svg class="icon-about" width="64" height="64">
                 <use href="./images/icons.svg#icon-antenna"></use>
                     </svg>
+                    </div>
                     </li>
                 <li class="about-item">
                     <h3 class="title">Strategy</h3>
                     <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="icon-item">
+                    <div class="icon-wrapper">
                     <svg class="icon-about" width="64" height="64">
                         <use href="./images/icons.svg#icon-clock"></use>
                     </svg>
+                    </div>
                 </li>    
                 <li class="about-item">
                     <h3 class="title">Punctuality</h3>
@@ -77,9 +81,11 @@
                         time.</p>
                 </li>
                 <li class="icon-item">
+                    <div class="icon-wrapper">
                     <svg class="icon-about" width="64" height="64">
                         <use href="./images/icons.svg#icon-diagram"></use>
                     </svg>
+                    </div>
                 </li>
                 <li class="about-item">
                     <h3 class="title">Diligence</h3>
@@ -87,9 +93,11 @@
                     </p>
                 </li>
                 <li class="icon-item">
+                    <div class="icon-wrapper">
                     <svg class="icon-about" width="64" height="64">
                         <use href="./images/icons.svg#icon-astronaut"></use>
                     </svg>
+                    </div>
                 </li>
                 <li class="about-item">
                     <h3 class="title">Technologies</h3>
@@ -235,42 +243,77 @@
             <h2 class="section-title">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
+                <div class="portfolio-thumb">
                     <img src="./images/portfolio/Banking_app.jpg" width="360" alt="Banking App">
+                    <p class="portfolio-overlay">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-info">
                         <h3 class="card-title">Banking App</h3>
                         <p class="card-text">App</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
+                <div class="portfolio-thumb">
                     <img src="./images/portfolio/Cashless_payment.jpg" width="360" alt="Cashless Payment">
+                    <p class="portfolio-overlay">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                        App · Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-info">
                         <h3 class="card-title">Cashless Payment</h3>
                         <p class="card-text">Marketing</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <div class="portfolio-thumb">
                     <img src="./images/portfolio/Meditation_app.jpg" width="360" alt="Meditation App">
+                    <p class="portfolio-overlay">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                        App · Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-info">
                         <h3 class="card-title">Meditation App</h3>
                         <p class="card-text">App</p>
                     </div>              
                 </li>
                 <li class="portfolio-item">
+                  <div class="portfolio-thumb">  
                     <img src="./images/portfolio/Taxi_service.jpg" width="360" alt="Taxi Service">
+                    <p class="portfolio-overlay">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                        App · Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-info">
                         <h3 class="card-title">Taxi Service</h3>
                         <p class="card-text">Marketing</p>
                     </div>                          
                 </li>
                 <li class="portfolio-item">
+                    <div class="portfolio-thumb">
                     <img src="./images/portfolio/Screen_illustrations.jpg" width="360" alt="Screen Illustrations">
+                    <p class="portfolio-overlay">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                        App · Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-info">
                         <h3 class="card-title">Screen Illustrations</h3>
                         <p class="card-text">Design</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <div class="portfolio-thumb">
                     <img src="./images/portfolio/Online_courses.jpg" width="360" alt="Online Courses">
+                    <p class="portfolio-overlay">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                        App · Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-info">
                         <h3 class="card-title">Online Courses</h3>
                         <p class="card-text">Marketing</p>
@@ -288,25 +331,40 @@
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         <ul class="social-icons">
             <li>
-                <svg class="icon" width="40" height="40">
-                  <use href="./images/icons.svg#icon-Instagram"></use>
-                </svg>
+                <li>
+                    <a class="social-link" href="#">
+                     <svg class="icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-Instagram"></use>
+                        </svg>
+                    </a>
+                </li>
             </li>
             <li>
-                <svg class="icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-            
+            <li>
+                <a class="social-link" href="#">
+                    <svg class="icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
             </li>
             <li>
-                <svg class="icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-fb"></use>
-                </svg>
+                <li>
+                    <a class="social-link" href="#">
+                        <svg class="icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-fb"></use>
+                        </svg>
+                    </a>
+                </li>
             </li>
             <li>
-                <svg class="icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
+                <li>
+                    <a class="social-link" href="#">
+                        <svg class="icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
             </li>
         </ul>
    
