--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="container">
             <h2 class="visually-hidden">Section Title for Screen Readers</h2>
             <ul class="about-list">
-            <li class="icon-item">
+            <li class="about-item">
                 <div class="icon-wrapper">
                     <svg class="icon-about" width="64" height="64">
                         <use href="./images/icons.svg#icon-antenna"></use>
@@ -68,7 +68,7 @@
                     <h3 class="title">Strategy</h3>
                     <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li class="icon-item">
+                <li class="about-item">
                     <div class="icon-wrapper">
                         <svg class="icon-about" width="64" height="64">
                             <use href="./images/icons.svg#icon-clock"></use>
@@ -80,7 +80,7 @@
                     <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
-                <li class="icon-item">
+                <li class="about-item">
                     <div class="icon-wrapper">
                         <svg class="icon-about" width="64" height="64">
                             <use href="./images/icons.svg#icon-diagram"></use>
@@ -92,7 +92,7 @@
                     <p class="text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
-                <li class="icon-item">
+                <li class="about-item">
                     <div class="icon-wrapper">
                         <svg class="icon-about" width="64" height="64">
                             <use href="./images/icons.svg#icon-astronaut"></use>
@@ -331,42 +331,35 @@
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         <ul class="social-icons">
             <li>
-                <li>
-                    <a class="social-link" href="#">
-                     <svg class="icon" width="24" height="24">
+                <a class="social-link" href="#">
+                     <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-Instagram"></use>
                         </svg>
                     </a>
                 </li>
             </li>
             <li>
-            <li>
                 <a class="social-link" href="#">
-                    <svg class="icon" width="24" height="24">
+                    <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
-            </li>
-            <li>
                 <li>
                     <a class="social-link" href="#">
-                        <svg class="icon" width="24" height="24">
+                        <svg class="icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-fb"></use>
                         </svg>
                     </a>
                 </li>
-            </li>
             <li>
-                <li>
                     <a class="social-link" href="#">
-                        <svg class="icon" width="24" height="24">
+                        <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
-            </li>
-        </ul>
+            </ul>
    
     </div>
     </footer>
