--- a/index.html
+++ b/index.html
@@ -117,31 +117,31 @@
                     <div class="card-team">
                         <h3 class="team-title">Mark Guerrero</h3>
                         <p class="team-text">Product Designer</p>
-                        <ul class="social-icons">
+                        <ul class="social-list">
                             <li class="social-item">
-                                <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                              <a class="social-link" href="#">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-fb"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -156,31 +156,31 @@
                     <div class="card-team">
                         <h3 class="team-title">Tom Ford</h3>
                         <p class="team-text">Frontend Developer</p>
-                        <ul class="social-icons">
+                        <ul class="social-list">
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-fb"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -195,31 +195,31 @@
                     <div class="card-team">
                         <h3 class="team-title">Camila Garcia</h3>
                         <p class="team-text">Marketing</p>
-                        <ul class="social-icons">
+                        <ul class="social-list">
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-fb"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -234,31 +234,31 @@
                     <div class="card-team">
                         <h3 class="team-title">Daniel Wilson</h3>
                         <p class="team-text">UI Designer</p>
-                        <ul class="social-icons">
+                        <ul class="social-list">
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-fb"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-item">
                                 <a class="social-link" href="#">
-                                    <svg class="social-icon" width="16" height="16">
+                                    <svg class="icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -362,7 +362,7 @@
             Web<span class="logo-part">Studio</span>
         </a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        <ul class="social-icons">
+        <ul class="social-list">
             <li>
                 <a class="social-link" href="#">
                      <svg class="icon" width="16" height="16">
