--- a/index.html
+++ b/index.html
@@ -349,45 +349,51 @@
         </section>
     </main>
     <footer class="page-footer">
-    <div class="container footer-container">
+    <div class="container footer-container"> 
+    <div class="footer-left">
         <a class="logo footer-logo" href="./index.html">
             Web<span class="logo-part">Studio</span>
         </a>
-        <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth
+            solutions.</p>
+    </div>
+    <div class="footer-social">
+        <p class="social-title">Social media</p>
         <ul class="social-list">
-            <li>
+            <li class="social-item">
                 <a class="social-link" href="#">
-                     <svg class="icon" width="16" height="16">
+                    <svg class="social-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                    </a>
-                </li>
+                    </svg>
+                </a>
             </li>
-            <li>
+            <li class="social-item">
                 <a class="social-link" href="#">
-                    <svg class="icon" width="16" height="16">
+                    <svg class="social-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
-                <li>
-                    <a class="social-link" href="#">
-                        <svg class="icon" width="16" height="16">
-                            <use href="./images/icons.svg#icon-fb"></use>
-                        </svg>
-                    </a>
-                </li>
-            <li>
-                    <a class="social-link" href="#">
-                        <svg class="icon" width="16" height="16">
+            <li class="social-item">
+                <a class="social-link" href="#">
+                    <svg class="social-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-fb"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-item">
+                <a class="social-link" href="#">
+                    <svg class="social-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-   
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
+    
     </div>
     </footer>
+    
 </body>
 
 </html>
