--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="card-team">
                         <h3 class="team-title">Mark Guerrero</h3>
                         <p class="team-text">Product Designer</p>
-                        <ul class="social-list">
+                        <ul class="team-social-list">
                             <li class="social-item">
                               <a class="social-link" href="#">
                                     <svg class="icon" width="16" height="16">
@@ -148,7 +148,7 @@
                     <div class="card-team">
                         <h3 class="team-title">Tom Ford</h3>
                         <p class="team-text">Frontend Developer</p>
-                        <ul class="social-list">
+                        <ul class="team-social-list">
                             <li class="social-item">
                                 <a class="social-link" href="#">
                                     <svg class="icon" width="16" height="16">
@@ -187,7 +187,7 @@
                     <div class="card-team">
                         <h3 class="team-title">Camila Garcia</h3>
                         <p class="team-text">Marketing</p>
-                        <ul class="social-list">
+                        <ul class="team-social-list">
                             <li class="social-item">
                                 <a class="social-link" href="#">
                                     <svg class="icon" width="16" height="16">
@@ -226,7 +226,7 @@
                     <div class="card-team">
                         <h3 class="team-title">Daniel Wilson</h3>
                         <p class="team-text">UI Designer</p>
-                        <ul class="social-list">
+                        <ul class="team-social-list">
                             <li class="social-item">
                                 <a class="social-link" href="#">
                                     <svg class="icon" width="16" height="16">
