--- a/index.html
+++ b/index.html
@@ -361,28 +361,28 @@
         <p class="social-title">Social media</p>
         <ul class="social-list">
             <li class="social-item">
-                <a class="social-link" href="#">
+                <a href="#" class="social-link">
                     <svg class="social-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
             <li class="social-item">
-                <a class="social-link" href="#">
+                <a href="#" class="social-link">
                     <svg class="social-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="social-item">
-                <a class="social-link" href="#">
+                <a href="#" class="social-link">
                     <svg class="social-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-fb"></use>
                     </svg>
                 </a>
             </li>
             <li class="social-item">
-                <a class="social-link" href="#">
+                <a href="#" class="social-link">
                     <svg class="social-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
