--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                         problem-solving.</p>
                 </li>
                 </ul>
+            </div>
             </section>
         <!--Our Team Section-->
         <section class="section-gallery">
@@ -104,7 +105,7 @@
                 <h2 class="section-title">Our Team</h2>
                 <ul class="gallery-list">
                   <li class="item-gallery card">
-                    <img src="./images/our team/Mark.jpg" width="264" alt="Mark Guerrero">
+                    <img src="./images/team/Mark.jpg" width="264" alt="Mark Guerrero">
                     <div class="card-team">
                         <h3 class="team-title">Mark Guerrero</h3>
                         <p class="team-text">Product Designer</p>
@@ -143,7 +144,7 @@
 
                 <!-- Tom Ford -->
                 <li class="item-gallery card">
-                    <img src="./images/our team/Tom.jpg" width="264" alt="Tom Ford">
+                    <img src="./images/team/Tom.jpg" width="264" alt="Tom Ford">
                     <div class="card-team">
                         <h3 class="team-title">Tom Ford</h3>
                         <p class="team-text">Frontend Developer</p>
@@ -182,7 +183,7 @@
                 
                 <!-- Camila Garcia -->
                 <li class="item-gallery card">
-                    <img src="./images/our team/Camila.jpg" width="264" alt="Camila Garcia">
+                    <img src="./images/team/Camila.jpg" width="264" alt="Camila Garcia">
                     <div class="card-team">
                         <h3 class="team-title">Camila Garcia</h3>
                         <p class="team-text">Marketing</p>
@@ -221,7 +222,7 @@
                 
                 <!-- Daniel Wilson -->
                 <li class="item-gallery card">
-                    <img src="./images/our team/Daniel.jpg" width="264" alt="Daniel Wilson">
+                    <img src="./images/team/Daniel.jpg" width="264" alt="Daniel Wilson">
                     <div class="card-team">
                         <h3 class="team-title">Daniel Wilson</h3>
                         <p class="team-text">UI Designer</p>
